# project_record_relocalize_apriltags_M2_PAR

./: .gitignore  LICENSE  README.md
PC_WS/src/limo_joystick_simu/: README.md  package.xml  setup.cfg  setup.py
docs/: architecture.md  experiments.md  gantt.md  index.html  project_specifications.md  references.bib  tasks.md
docs/Project_robot/: beamer_statale.aux  beamer_statale.fdb_latexmk  beamer_statale.fls  beamer_statale.nav  beamer_statale.out  beamer_statale.tex  beamer_statale.toc  beamertheme_statale.sty
docs/Project_robot/chapters/: special_slides.tex
docs/Project_robot/sections/: introduction.tex  personalization.tex  project_fases.tex
docs/Rapport_latex/: biblio.bib  chapitre_optimisation.tex  template_rapport.tex
docs/assets/css/: style.css
docs/assets/js/: main.js
docs/otimization/install/: local_setup.sh  setup.sh
docs/otimization/log/: latest_build
docs/otimization/teste_DG/: DG_otmization.py  DG_otmization_amostrate.py  generate_synthetic_ground_truth.py  synthetic_ground_truth.yaml
docs/otimization/testes_py/: dataset_generate.py  dataset_y_zero.yaml  launch_tags.py  otmizationDG.py  otmizationDGnoyse.py  otmization_trajetory_DG.py  otmization_trajetory_DG_noise.py  sensor_data.yaml  tags_poses.yaml  tags_rviz.yaml
limo_WS/src/limo_joystick/: README.md  package.xml  setup.cfg  setup.py
limo_ws/src/limo_apriltag_tools/: README.md  package.xml  setup.cfg  setup.py
limo_ws/src/limo_apriltag_tools/config/: apriltag_params.yaml  camera_v4l2.yaml  webcam_calibration.yaml
limo_ws/src/limo_apriltag_tools/launch/: apriltag_full_v4l2_yuyv.launch.py  apriltag_webcam_full.launch.py
limo_ws/src/limo_apriltag_tools/limo_apriltag_tools/: camera_info_publisher.py  tag_latcher_node.py  yuyv_to_mono_node.py
limo_ws/src/limo_apriltag_tools/resource/: limo_apriltag_tools
limo_ws/src/limo_apriltag_tools/scripts/: camera_info_publisher_node  tag_latcher
pc_WS/src/limo_joystick_simu/: README.md
tutorials/: Real_Limo_gazebo_with_joystick.md  cofig_Limo_ROS2_Humble_eviroment.md
(+250 files in other folders)
